--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 port = 3007
-host = 127.0.0.1
-dbName = elflower
-dbUser = postgres
-dbPassword = Typebot2
-dbHost = localhost
-dbPort = 5432
-secretKey = naniThisGavno
+host = 192.168.1.111
+dbName=elflower
+dbUser=postgres
+dbPassword=Typebot2
+dbHost=localhost
+dbPort=5432
+secretKey=UnaGasaiNani
