fix env PORT. Ubuntu lost the port varible, but somehow connected to db. Magic...

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-port = 3007
-host = 192.168.1.111
+SERVER_PORT = 3007
+SERVER_HOST = 192.168.1.111
 dbName=elflower
 dbUser=postgres
 dbPassword=Typebot2
