add dockignore, dock.prod. Try fix fileupload

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM node:16
+FROM node:16-alpine
 
 WORKDIR /app
 
@@ -10,5 +10,5 @@ COPY . .
 
 EXPOSE 3007
 
-CMD ["npm", "run", "serve"]
+CMD ["npm", "run", "start"]
 
